// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot should display with "expense" when expense count === 1 1`] = `
<div>
  <h1>
    1
     
    expense
     Totalling 
    1000
  </h1>
</div>
`;

exports[`snapshot should display with "expenses" when expense count > 1 1`] = `
<div>
  <h1>
    2
     
    expenses
     Totalling 
    1500
  </h1>
</div>
`;

exports[`snapshot should not display any results with zero expenses 1`] = `<div />`;
